--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   skeletonizer: ^1.1.2+1
   elegant_notification: ^2.1.2
+  flutter_chat_ui: ^1.6.14
+  flutter_chat_types:
 
 dev_dependencies:
   flutter_test:
