--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,30 @@ dependencies:
   elegant_notification: ^2.1.2
   flutter_chat_ui: ^1.6.14
   flutter_chat_types:
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.1
+
+
+#flutter pub run flutter_native_splash:create
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  color: "#ffbf00"
+  image: assets/logo.png
+  color_dark: "#121212"
+  image_dark: assets/logo.png
+
+#flutter pub run flutter_launcher_icons
+flutter_launcher_icons: 
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  windows:
+    generate: true
+    image_path: "assets/icon_win.png"
+    icon_size: 48 # min:48, max:256, default: 48
 
 dev_dependencies:
   flutter_test:
